RESOLVED FIXED279195
[WPE] Fix GPUProcess compilation problem
https://bugs.webkit.org/show_bug.cgi?id=279195
Summary [WPE] Fix GPUProcess compilation problem
Alejandro G. Castro
Reported 2024-09-05 08:32:40 PDT
There is some missing header, maybe unify build problem.
Attachments
Alejandro G. Castro
Comment 1 2024-09-05 08:33:47 PDT
EWS
Comment 2 2024-09-06 01:57:32 PDT
Committed 283261@main (97a7051ae478): <https://commits.webkit.org/283261@main> Reviewed commits have been landed. Closing PR #33188 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.