Cherry-pick 283261@main (97a7051ae478). https://bugs.webkit.org/show_bug.cgi?id=279195

[WPE] Fix GPUProcess compilation problem
    https://bugs.webkit.org/show_bug.cgi?id=279195

    Reviewed by Philippe Normand.

    Some missing header, probably unified build problem.

    * Source/WebKit/WebProcess/GPU/media/gstreamer/VideoLayerRemoteGStreamer.cpp:

    Canonical link: https://commits.webkit.org/283261@main

Canonical link: https://commits.webkit.org/282416.66@webkitglib/2.46